--- a/org/pages/publications.org
+++ b/org/pages/publications.org
@@ -48,14 +48,14 @@
 
 *Fischer F. J., J. Chave, A. Zanne, T. Jucker, A. Fajardo, G. Vieilledent, R. A. Ferreira de Lima, [...], and A. Sellin.* A global map of wood density. /Nature Plant/.
 
-*Boisseaux M., D. Krebber, B. Burban, A. Casado-Garcia, J. Cazal1, J. Clément, G. Derroire, C. Fortunel, J.-Y. Goret, J. Heras, G. Jaouen, C. Scoffoni, G. Vieilledent, J. Vleminckx, S. Coste, H. Schimann, and C. Stahl.* Local habitat cannot be explained by leaf chemical and water-related traits in neotropical trees. /Functional Ecology/.
-
 *Khan S., I. Maréchaux, G. Vieilledent, S. Guitet, O. Brunaux, B. Ferry, F. Soulard, C. Stahl, C. Baraloto, C. Fortunel and V. Freycon* Regional soil profile data reveals the predominant role of geomorphology and geology in accurately deriving digital soil texture maps in a tropical area. /Geoderma/.
 
 *** 2024
 :PROPERTIES:
 :CUSTOM_ID: yr2024
 :END:
+
+[55]. *Boisseaux M., D. Krebber, B. Burban, A. Casado-Garcia, J. Cazal, J. Clément, G. Derroire, C. Fortunel, J.-Y. Goret, J. Heras, G. Jaouen, C. Scoffoni, G. Vieilledent, J. Vleminckx, S. Coste, H. Schimann, C. Stahl.* 2024. Shifting trait coordination along a soil-moisture-nutrient gradient in tropical forests. /Functional Ecology/. *00*:1-17. {{{doi(10.1111/1365-2435.14679)}}}. {{{pdf(Boisseaux2024-FE.pdf)}}}, Supplementary materials {{{supp(Boisseaux2024-FE-SM.pdf)}}} {{{altm(10.1111/1365-2435.14679)}}}
 
 [54]. *Santoro M., O. Cartus, S. Quegan, H. Kay, R. M. Lucas, A. Araza, M. Herold, N. Labrière, J. Chave, A. Rosenqvist, T. Tadono, K. Kobayashi, J. Kellndorfer, V. Avitabile, H. Brown, J. Carreiras, M.J. Campbell, J. Cavlovic, P. da Conceição Bispo, H. Gilani, M. L. Khan, A. Kumar, S. L. Lewis, J. Liang, E. T. A. Mitchard, A. M. Pacheco-Pascagaza, O. L. Phillips, C. M. Ryan, P. Saikia, D. Schepaschenko, H. Sukhdeo, H. Verbeeck, G. Vieilledent, A. Wijaya, S. Willcock, and F. M. Seifert.* 2024. Design and performance of the Climate Change Initiative Biomass global retrieval algorithm. /Science of Remote Sensing/. *10*:100169. {{{doi(10.1016/j.srs.2024.100169)}}}. {{{pdf(Santoro2024-SRS.pdf)}}}, Supplementary materials {{{supp(Santoro2024-SRS-SM.pdf)}}} {{{altm(10.1016/j.srs.2024.100169)}}}
 
