--- a/org/pages/people.org
+++ b/org/pages/people.org
@@ -37,7 +37,9 @@
 
 [[https://sites.google.com/view/edene/blog?authuser=0#h.u3j0kna10p6d][*Margaux Rojat*]] (collaboration), planned in 2026, Supervisors: Robin Pouteau and Raphaël Pélissier, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Interactions biotiques entre les plantes exotiques envahissantes et les arbres menacés endémiques des Mascareignes/, Following the PhD thesis: PhD thesis in progress.
 
-[[https://jeanneclement.github.io/][*Jeanne Clément*]], 2023, Co-supervisor: Pierre Couteron, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Prédire la vulnérabilité des espèces d'arbres au changement climatique en forêt Guyanaise via l'utilisation de modèles joints de distribution des espèces/, Following the PhD thesis: Mathematics teacher.
+[[https://www.linkedin.com/in/boisseaux-marion-9a9587105][*Marion Boisseaux*]] (collaboration), 2023, Supervisors: Heidy Schimann, Sabrina Coste, and Clément Stahl, Université de Guyane, Ecole doctorale Diversités, santé et développement en Amazonie, Thèse de doctorat, spécialité Sciences agronomiques et écologiques, /Functional strategies and microbiota of tropical tree species in the context of climate change/, Following the PhD thesis: Postdoc in Christine Scoffoni's lab.
+
+[[https://www.linkedin.com/in/cl%C3%A9ment-jeanne-482a22178][*Jeanne Clément*]], 2023, Co-supervisor: Pierre Couteron, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Prédire la vulnérabilité des espèces d'arbres au changement climatique en forêt Guyanaise via l'utilisation de modèles joints de distribution des espèces/, Following the PhD thesis: Data analyst at IRD.
 
 [[https://fr.linkedin.com/in/camille-girard-tercieux][*Camille Girard-Tercieux*]], 2022, Co-supervisors: Raphaël Pélissier and Isabelle Maréchaux, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Rôle de la variabilité intra-spécifique dans la coexistence des espèces en forêt tropicale/, Following the PhD thesis: Ecology and agronomy teacher.
 
