Updating publication list

--- a/org/pages/publications.org
+++ b/org/pages/publications.org
@@ -42,13 +42,10 @@
 :CUSTOM_ID: in-prep
 :END:
 
-*Clément J., F. Gosselin, P. Couteron, and G. Vieilledent.* 2023. =jSDM=: an R package to fit joint species distribution models. /Methods in Ecology and Evolution/.
-
-*Fischer F. J., J. Chave, A. Zanne, T. Jucker, A. Fajardo, G. Vieilledent, R. A. Ferreira de Lima, [...], and A. Sellin.* Exploring intraspecific wood density variation with the Global Wood Density Database v2. /Global Change Biology/.
-
-*Fischer F. J., J. Chave, A. Zanne, T. Jucker, A. Fajardo, G. Vieilledent, R. A. Ferreira de Lima, [...], and A. Sellin.* A global map of wood density. /Nature Plant/.
-
-*Khan S., I. Maréchaux, G. Vieilledent, S. Guitet, O. Brunaux, B. Ferry, F. Soulard, C. Stahl, C. Baraloto, C. Fortunel and V. Freycon* Regional soil profile data reveals the predominant role of geomorphology and geology in accurately deriving digital soil texture maps in a tropical area. /Geoderma/.
+- *Clément J., F. Gosselin, P. Couteron, and G. Vieilledent.* 2023. =jSDM=: an R package to fit joint species distribution models. /Methods in Ecology and Evolution/.
+- *Khan S., I. Maréchaux, G. Vieilledent, S. Guitet, O. Brunaux, B. Ferry, F. Soulard, C. Stahl, C. Baraloto, C. Fortunel and V. Freycon* Regional soil profile data reveals the predominant role of geomorphology and geology in accurately deriving digital soil texture maps in a tropical area. /Geoderma/.
+- *Fischer F. J., J. Chave, A. Zanne, T. Jucker, A. Fajardo, A. Fayolle, R. A. Ferreira de Lima, G. Vieilledent, and XX coauthors.* Beyond species means -- the intraspecific contribution to global wood density variation. /New Phytologist/.
+- *Fischer F. J., J. Chave, A. Zanne, T. Jucker, A. Fajardo, A. Fayolle, R. A. Ferreira de Lima, G. Vieilledent, and XX coauthors.* A global map of wood density. /Nature Plant/.
 
 *** 2025
 :PROPERTIES:
