Updating link in people

--- a/org/pages/people.org
+++ b/org/pages/people.org
@@ -35,7 +35,7 @@
 :CUSTOM_ID: phd-students
 :END:
 
-[[https://sites.google.com/view/edene/blog?authuser=0#h.9cuoubh0cj0a][*Margaux Rojat*]] (collaboration), planned in 2026, Supervisors: Robin Pouteau and Raphaël Pélissier, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Interactions biotiques entre les plantes exotiques envahissantes et les arbres menacés endémiques des Mascareignes/, Following the PhD thesis: PhD thesis in progress.
+[[https://www.researchgate.net/profile/Margaux-Rojat][*Margaux Rojat*]] (collaboration), planned in 2026, Supervisors: Robin Pouteau and Raphaël Pélissier, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Interactions biotiques entre les plantes exotiques envahissantes et les arbres menacés endémiques des Mascareignes/, Following the PhD thesis: PhD thesis in progress.
 
 [[https://www.linkedin.com/in/boisseaux-marion-9a9587105][*Marion Boisseaux*]] (collaboration), 2023, Supervisors: Heidy Schimann, Sabrina Coste, and Clément Stahl, Université de Guyane, Ecole doctorale Diversités, santé et développement en Amazonie, Thèse de doctorat, spécialité Sciences agronomiques et écologiques, /Functional strategies and microbiota of tropical tree species in the context of climate change/, Following the PhD thesis: Postdoc in Christine Scoffoni's lab.
 
